# nlp-processing-with-transformers

./: .gitignore  Pipfile  README.md  pyproject.toml
chapter-1/: 00_text_classification.ipynb  01_named_entity_recognition.ipynb  02_question_answering.ipynb  03_summarization.ipynb  04_translation.ipynb  05_text_generation.ipynb  constants.py
chapter-2/: 00_list_datasets.ipynb  00_text_classification.ipynb  01_text_classification.ipynb
chapter-3/: 00_attention.ipynb  01_transformer.ipynb
