[project]
name = "nlp-processing-with-transformers"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "David Armendariz", email = "david.adrian.a.p@gmail.com"},
]
dependencies = [
    "transformers~=4.40.1",
    "pandas~=2.2.2",
    "notebook~=7.1.3",
    "torch~=2.3.0",
    "ipywidgets~=8.1.2",
    "sentencepiece~=0.2.0",
    "datasets~=2.19.0",
    "matplotlib~=3.8.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = false
name = "pip_conf_index_global"

[tool.pdm.dev-dependencies]
dev = []
